--- a/estilo.css
+++ b/estilo.css
@@ -148,7 +148,7 @@ p{
 a.botao{;
 	padding: 10px 5px;
 	border-radius: 5px;
-	color: DarkRed;
+	color: Red;
 	text-transform: uppercase;
 	cursor: pointer;
 	margin: 5px 0;
